feat: add tooltip to explain AI feature and refactor state handling in AddArticleForm

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,28 @@ body {
   background-color: #F9FAFB;
 }
 
+.tooltip {
+  position: relative;
+
+  .tooltip-next {
+    position: absolute;
+    top: 100%;
+    margin-top: 0.5rem;
+    left: -90px;
+    width: 180px;
+    text-align: center;
+    background-color: #f9fafb;
+    border: 1px solid gray;
+    color: black;
+    border-radius: 8px;
+    display: none;
+  }
+
+  &:hover .tooltip-next {
+    display: inline-block;
+  }
+}
+
 .article-form {
   display: grid;
   grid-template-columns: max-content 1fr;
